--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 precompiled/ubuntu/Qt653-ubuntu2004.tar.xz filter=lfs diff=lfs merge=lfs -text
 precompiled/windows/QtMingw64.7z filter=lfs diff=lfs merge=lfs -text
+precompiled/macos/Qt653-macos.tar.xz filter=lfs diff=lfs merge=lfs -text
